# Solace

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/app/: mod.rs
src/backend/: installer.rs  metadata.rs  mod.rs
src/solace_app/: mod.rs
