[package]
name = "solace"
version = "0.1.0"
edition = "2021"


[dependencies]
#freya = "0.2"
#dioxus = { version = "0.5", features = ["macro", "hooks"], default-features = false }
colored = "2.1.0"
serde = "1.0.210"
toml = "0.8.19"
versions = {version = "6.3.2",features = ["serde"]}
reqwest = {version = "0.12.7",features = ["blocking"]}
ctrlc = "3.4.5"
minecraft-client-rs = "0.1.3"
