[package]
edition = "2021"
name = "solace"
license = "MIT"
authors = ["Starlight-software", "Caznix"]
version = "0.1.0"
repository = "https://github.com/Starlight-Industries/Solace"

[dependencies]
colored = "2.1.0"
serde = "1.0.210"
toml = "0.8.19"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
ctrlc = { version = "3.4.5", features = ["termination"] }
#minecraft-client-rs = "0.1.3" # we may need to use this later
clap = { version = "4.5.17", features = ["derive"] }
inquire = "0.7.5"
serde_json = "1.0.128"
color-eyre = "0.6.3"
env_logger = "0.11.5"
spinoff = "0.8.0"
eframe = "0.28.1"
egui_extras = "0.28.1"
